# FUK

./: .gitignore  README.md  download_models.sh  pyproject.toml  setup.sh  start.sh
docs/: MODEL_DOWNLOADER_README.md  README_installation.md  WINDOWS.md  vendor_README.md
fuk/: fuk_ui.jsx  fuk_web_server.py  index.html  start_web_ui.py
fuk/config/: defaults.json  models.json
fuk/config/tools/: depth-anything-v3.json  musubi-qwen.json  musubi-wan.json  sam2.json
fuk/core/: __init__.py  chained_pipeline.py  diffsynth_backend.py  eligen_loader.py  exr_exporter.py  exr_utils.py  file_browser.py  film_interpolator.py  flux2_pipeline.py  image_generation_manager.py  latent_decoder.py  latent_manager.py  pipeline_base.py  postprocessors.py  preprocessors.py  qwen_image_wrapper.py  qwen_pipeline.py  video_generation_manager.py  video_processor.py  video_utils.py  wan_pipeline.py  wan_video_wrapper.py
fuk/core/old/: wan_video_wrapper.py
fuk/core/preprocessors/: __init__.py  base.py  canny.py  crypto.py  crypto_video_batch.py  depth.py  depth_video_batch.py  manager.py  normals.py  openpose.py
fuk/testing/: test_da3_direct.py
fuk/tests/: check_setup.py  debug_paths.py  hybrid_workflow_example.py  test_exr_video_workflow.py  test_generation_pipeline.py  test_latent2Exr.py  test_video_generation.py  verify_v1.2.py  vid_i2v_test.sh
fuk/ui/: blend_gen_script.py  file_browser.py  file_browser_endpoints.py  fuk_logger.py  fuk_web_server.py  hd_proxy_endpoints.py  index.html  latent_layer_stack.py  layer_stack_endpoints.py  llm_endpoints.py  lora_dataset_endpoints.py  lora_dataset_manager.py  package.json  project_api.py  project_endpoints.py  storyboard_endpoints.py  storyboard_manager.py  video_endpoints.py  vite.config.js
fuk/ui/data/: saved_seeds.json
fuk/ui/docs/: PROJECT_MANAGEMENT.md
fuk/ui/fuk-ui/src/backend/: INTEGRATION_PATCH.py
fuk/ui/src/: App.jsx  main.jsx  vite.config.js
fuk/ui/src/components/: ConformHDButton.jsx  Footer.jsx  GenerationHistory.jsx  GenerationModal.jsx  Icons.jsx  ImageUploader.jsx  InlineImageInput.jsx  LayerStackPanel.jsx  MarkerTextarea.jsx  MediaUploader.jsx  ProgressBar.jsx  ProjectBar.jsx  PromptPanel.jsx  SeedControl.jsx  TabButton.jsx  VideoSyncController.jsx  ZoomableImage.jsx  index.js
fuk/ui/src/hooks/: index.js  useActiveTab.js  useGeneration.js  useKeyboardShortcuts.js  useLocalStorage.js  useProject.js  useSavedSeeds.js  useStoryboard.js  useVideoPlayback.js
fuk/ui/src/styles/: animations.css  components.css  forms.css  fuk-ui.css  generation-history.css  generation-modal.css  index.css  inline-image-input.css  layer-stack.css  layout.css  media-uploader.css  placeholders.css  project-bar.css  prompt-panel.css  seed-control.css  sequence-styles.css  storyboard.css  tabs.css  variables.css  video-sync-controller.css  zoomable-image.css
fuk/ui/src/tabs/: ExportTab.jsx  ImageDescribeTool.jsx  ImageTab.jsx  LayersTab.jsx  LoraDatasetBuilder.jsx  PlaceholderTab.jsx  PostprocessTab.jsx  PreprocessTab.jsx  StoryboardTab.jsx  UtilitiesTab.jsx  VideoTab.jsx  eligen_image_tools_card.jsx
fuk/ui/src/utils/: api.js  constants.js  helpers.js  historyApi.js  layerStackApi.js  projectApi.js  projectManager.js  promptApi.js  storyboardApi.js
fuk/utils/: __init__.py  depth_export.py  download_models.py  format_convert.py  latent_to_exr.py  metadata.py  model_adapters.py  model_downloader.py  preprocessors.py  test_autodownload.py
web/: index.html  wiki.html
web/css/: styles.css
